[package]
name = "hpts"
version = "0.1.4"
authors = ["hexyoungs <chuxdesign@hotmail.com>"]
description = "hpts(http-proxy-to-socks) is a tool to convert socks proxy into http proxy"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/chux0519/hpts"

[dependencies]
clap = "4.5.23"
tokio = { version = "1.42.0", features = ["full"] }
httparse = "1.3.4"
futures = "0.3.0"
log = "0.4"
env_logger= "0.11.5"
